# Community-Patch-DLL

./: .gitignore  BRANCH_PROGRESS_SUMMARY.md  CMakeLists.txt  Community-Patch-DLL-cppcheck-notes.txt  CvDesyncDebugger.cpp  CvDesyncDebugger.h  ENHANCED_MP_DESYNC_DEBUGGING_IMPLEMENTATION.md  MEMORY_DEBUG_IMPLEMENTATION.md  MP_DESYNC_DEBUGGING_REVIEW.md  README_modinfo_manager.md  build.bat  build_vp_clang.py  build_vp_clang_linux.py  build_vp_clang_sdk.py  build_vs.bat  civ5_mod_disabling_analysis.md  clang_linux_compat.h  clang_linux_threading.cpp  clang_tidy_summary.md  cmake.md  collate_plist_results.py  comprehensive_review.md  filter_fixes.py  final_analysis_summary.py  fix_header_case_issues.py  fix_remaining_const_returns.py  modinfo_manager.py  run_clang_tidy.py  script_analysis.md  sdk70-clang-toolchain.cmake  v90-clang.cmake.txt  vs2008-clang-toolchain.cmake
(1) Community Patch/: (1) Community Patch (v 143).modinfo
(1) Community Patch/Core Files/Core Changes/: CoreChanges.sql
(1) Community Patch/Core Files/Core Tables/: CustomModOptions.xml
(1) Community Patch/Core Files/Overrides/: MPGameSetupScreen.lua  MPGameSetupScreen.xml  ModsMenu.lua  MultiplayerSelect.lua  StagingRoom.lua
(1) Community Patch/Core Files/Text/: CoreText_en_US.xml
(3a) EUI Compatibility Files/LUA/: DiploCorner.lua  DiploCorner.xml
.github/workflows/: CodeQL.yml  build_vp.yml  cppcheck-win.yml  cppcheck.yml
CvGameCoreDLLUtil/include/: CvAssert.h  CvDllInterfaces.h  CvEnums.h  CvLuaStaticInstance.h  CvString.h
CvGameCoreDLL_Expansion2/: CMakeLists.txt  CustomMods.cpp  CustomMods.h  CvAIOperation.cpp  CvAStar.cpp  CvAdvisorCounsel.cpp  CvBarbarians.cpp  CvBuilderTaskingAI.cpp  CvBuildingClasses.cpp  CvBuildingClasses.h  CvCity.cpp  CvCityStrategyAI.cpp  CvCorporationClasses.cpp  CvCultureClasses.cpp  CvDealAI.cpp  CvDiplomacyAI.cpp  CvDllBuildingInfo.cpp  CvDllBuildingInfo.h  CvDllContext.cpp  CvDllDatabaseUtility.cpp  CvDllGame.cpp  CvDllGame.h  CvDllPlayer.cpp  CvDllPlayer.h  CvEconomicAI.cpp  CvEspionageClasses.cpp  CvGame.cpp  CvGame.h  CvGameCoreDLL.cpp  CvGameCoreDLLPCH.h  CvGameCoreUtils.h  CvGlobals.cpp  CvGlobals.h  CvHomelandAI.cpp  CvHomelandAI.h  CvInfos.cpp  CvMemoryDebug.cpp  CvMemoryDebug.h  CvMemoryDebugTest.cpp  CvMemoryDebugTest.h  (+25 more)
CvGameCoreDLL_Expansion2/Lua/: CvLuaCity.cpp  CvLuaGame.cpp  CvLuaGame.h  CvLuaPlayer.cpp  CvLuaScopedInstance.h
CvWorldBuilderMap/include/: CvWorldBuilderMap.h  CvWorldBuilderMapElementAllocator.h  CvWorldBuilderMapTypeDesc.h  FRelationshipBitset.h
FirePlace/include/FireWorks/: FAutoVariable.h  FAutoVariableBase.h  FAutoVector.h  FFastAllocator.h
FirePlace/include/FireWorks/FLua/include/: FLuaTypes.h
FirePlace/include/FireWorks/Win32/: FDebugHelper.h
